# mywork2019

./: README.md  ros常用
backup/ros/: ReadMe
backup/ros/pointcloud/: CMakeLists.txt  package.xml
backup/ros/pointcloud/src/: example.cpp  pointhandle.cpp  pointhandle2.cpp  pointreader.cpp
laserpoint/: package.xml
laserpoint/src/: msg_generate.cpp
laserscan/: ReadMe  rosproject.sh
laserscan/laser_geometry-indigo-devel/: CMakeLists.txt  package.xml
laserscan/laser_geometry-indigo-devel/src/: pointpipe.cpp
laserscan/laserpoint/: CMakeLists.txt
laserscan/pointcloud/src/: pointhandle.cpp  pointreceiver.cpp
license_plate/: check_data.py  data_prepare.py  restore.py  train.py
license_plate/models/: model.py
license_plate/train_data/: z.npy  z1.npy
license_plate/utils/: tf_util2.py
pcl_tutorial/: ReadMe
pcl_tutorial/feature/src/: CMakeLists.txt  main.cpp
pcl_tutorial/fpfh/src/: CMakeLists.txt  main.cpp
pcl_tutorial/normal/: ReadMe
pcl_tutorial/normal/src/: CMakeLists.txt  main.cpp
pcl_tutorial/pcldemo/src/: CMakeLists.txt  main.cpp
pcl_tutorial/pfh/src/: CMakeLists.txt  main.cpp
pointcloud/: CMakeLists.txt
pointcloud/launch/: planefpfh.launch  readcloud.launch
pointcloud/src/: plane.cpp  plane2.cpp  pointhandle.cpp  pointhandle2.cpp  pointreceiver.cpp
pointgan/: ReadMe  data_prepare.py  mnist_gan.py  test.ipynb
pointgan/models/: model.py
pointgan/utils/: tf_util2.py
pointml/src/: CMakeLists.txt  main.cpp
sydney_pcl/src/: CMakeLists.txt  main.cpp  normal_seg.cpp
tensorflow_work/GAN_example/: GAN.py  GAN_2.py  ReadMe
test1/: CMakeLists.txt  package.xml
test1/launch/: launchtest1.launch
test1/src/: listener.cpp  talker.cpp
test2/: CMakeLists.txt  package.xml
test2/src/: client.cpp  server.cpp
test2/srv/: myservice.srv
test3/: CMakeLists.txt  package.xml
test3/launch/: launchtest3.launch
test3/msg/: gps.msg
test3/src/: pylistener.py  pylistener2.py  pytaker.py
testkde/: CMakeLists.txt  package.xml  testkde.kdev4
testkde/launch/: launchkde.launch
testkde/msg/: gps.msg
testkde/src/: listener.cpp  talker.cpp
tfexample/: CMakeLists.txt  package.xml
tfexample/src/: tf_broadcaster.cpp  tf_listener.cpp
virturalscan/: ReadMe
virturalscan/src/: CMakeLists.txt  main.cpp  obj_scan.cpp  obj_scan.h
